--- a/.~index.ipynb
+++ b/.~index.ipynb
@@ -943,35 +943,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "{'Albuquerque',\n",
-       " 'Archipelago Sea',\n",
-       " 'Buenos Aires',\n",
-       " 'Greenville',\n",
-       " 'Iguazu Falls',\n",
-       " 'Los Cabos',\n",
-       " 'Marakesh',\n",
-       " 'Pyeongchang',\n",
-       " 'Salina Island',\n",
-       " 'San Antonio',\n",
-       " 'Solta',\n",
-       " 'Toronto',\n",
-       " 'Walla Walla Valley'}"
+       "set"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "unique_travel_cities = set(top_travel_cities)\n",
-    "unique_travel_cities"
+    "type(unique_travel_cities)"
    ]
   },
   {
@@ -983,7 +971,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
@@ -992,7 +980,7 @@
        "set"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     }
